--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dartz: ^0.10.1
   logger: ^2.5.0
   shared_preferences: ^2.5.3
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
