--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   logger: ^2.5.0
   shared_preferences: ^2.5.3
   equatable: ^2.0.7
+  multi_image_picker_view: ^3.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
