--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   equatable: ^2.0.7
   multi_image_picker_view: ^3.0.0
   image_picker: ^1.1.2
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
