--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   http_parser: ^4.1.2
   mime: ^2.0.0
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
