--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http_parser: ^4.1.2
   mime: ^2.0.0
   permission_handler: ^12.0.0+1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
