--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   intl: ^0.20.2
   url_launcher: ^6.3.1
+  timelines_plus: ^1.0.6
+
 
 dev_dependencies:
   flutter_test:
