--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.1
   timelines_plus: ^1.0.6
+  internet_connection_checker_plus: ^2.7.2
 
 
 dev_dependencies:
