fix: user info based drawer on different screens and actions

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-        android:label="rental_service"
+        android:label="ProMatrix TL"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
