--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   timelines_plus: ^1.0.6
   internet_connection_checker_plus: ^2.7.2
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.6
 
 
 dev_dependencies:
@@ -67,7 +68,15 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "asset/icons/pro_logo.png"
+  image_path: "asset/icons/icon1.png"
+
+
+flutter_native_splash:
+  color: "#405189"
+  image: asset/icons/app-icon.png
+  android_12:
+    color: "#405189"
+    image: asset/icons/app-icon.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
