--- a/l10n.yaml
+++ b/l10n.yaml
@@ -5,3 +5,4 @@ output-localization-file: app_localizations.dart
 output-dir: lib/l10n/generated
 nullable-getter: false
 synthetic-package: false
+untranslated-messages-file: untranslated.txt
