--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.6
   flutter_localization: ^0.3.2
+  firebase_core: ^4.0.0
+  firebase_messaging: ^16.0.0
+
 
 
 dev_dependencies:
