--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_messaging: ^16.0.0
   flutter_local_notifications: ^19.4.2
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  share_plus: ^12.0.0
 
 
 
