--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_local_notifications: ^19.4.2
   pdf: ^3.11.3
   printing: ^5.14.2
-  share_plus: ^12.0.0
+  path_provider: ^2.1.5
 
 
 
