--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:label="ProMatrix TL"
+        android:label="ProMatrix"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
